[metadata]
name = noby
author = Arti Zirk
author_email = arti.zirk@gmail.com
description = Minimal dockerfile builder
url = https://github.com/artizirk/noby
platforms = unix
classifiers =
    License :: OSI Approved :: MIT License,
    Programming Language :: Python :: 3

[options]
py_modules = noby
test_suite = tests

